--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -21,6 +21,8 @@
         <button type="button" id="usernameButton">Validate</button>
     </form>
 
+    <img id="myImage" src="../images/cc.png">
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"
         integrity="sha512-E8QSvWZ0eCLGk4km3hxSsNmGWbLtSCSUcewDQPQWZF6pEU8GlT8a5fF32wOl1i8ftdMhssTrF/OhyGWwonTcXA=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
