feat: image can be added and registered during the same session [WIP]

--- a/public/pages/chat.html
+++ b/public/pages/chat.html
@@ -48,6 +48,10 @@
             <div class="channel-messages messages">
             </div>
 
+            <div id="drop-zone" class="drop-zone">
+                <p>Drag & Drop an Image Here</p>
+            </div>
+
             <div class="input-area">
                 <textarea id="input-message" class="inputMessage" placeholder="Type here..."></textarea>
             </div>
