roles all working, transfer all good - stegano part to add

--- a/public/pages/register.html
+++ b/public/pages/register.html
@@ -23,6 +23,13 @@
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required><br>
 
+        <label>
+            <input type="radio" name="userType" id="steganaliste" value="steganaliste" checked />
+            <label for="steganaliste">Stéganaliste</label>
+            <input type="radio" name="userType" id="mafia" value="mafia" />
+            <label for="mafia">Mafia</label>
+        </label>
+
         <button type="button" id="registerButton">Register</button>
     </form>
 
