WIP: save sending and converting img rust

--- a/public/pages/chat.html
+++ b/public/pages/chat.html
@@ -60,10 +60,11 @@
                     
                     <label for="dropdown-choice">Choisissez un élément:</label>
                     <select id="dropdown-choice" name="dropdown-choice">
-                        <option value="" disabled selected>Choisissez une option</option>
+                        <option value="" disabled selected>Choisissez un algorithme</option>
+                        <option value="">Aucun</option>
                         <option value="lsb">LSB</option>
                         <option value="matrix_embedding">Matrix Embedding</option>
-                        <option value="fourrier">Transformée de Fourrier</option>
+                        <option value="fourier">Transformée de Fourier</option>
                     </select>
                     
                     <button type="submit">Submit</button>
