feat: added the output file for steganaliste and the steganalitical methods can the called [WIP: not yet returned to the client]

--- a/public/pages/chat.html
+++ b/public/pages/chat.html
@@ -110,8 +110,8 @@
                 <form id="algorithm-form">
                     <label for="prob-algorithm-choice">Choisissez un algorithme probabiliste:</label>
                     <select id="prob-algorithm-choice" name="prob-algorithm-choice">
-                        <option value="image-delta">Delta de l'Image</option>
-                        <option value="lsb-displayed">LSB affichée</option>
+                        <option value="img-delta">Delta de l'Image</option>
+                        <option value="lsb">LSB affichée</option>
                         <option value="rs">RS</option>
                         <option value="dynrs">DynRS</option>
                         <option value="shanon">Shanon</option>
