Function Steganalyse and Steganalyste part

--- a/public/pages/chat.html
+++ b/public/pages/chat.html
@@ -117,6 +117,13 @@
                         <option value="shanon">Shanon</option>
                         <option value="randshanon">RandShanon</option>
                     </select>
+                    <div id="randshanon-options" style="display: none; margin-top: 10px;">
+                        <label for="randshanon-value">valeur pour RandShanon:</label>
+                        <select id="randshanon-value" name="randshanon-value">
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                        </select>
+                    </div>
                     <button type="submit">Submit</button>
                 </form>
             </div>
