feat: now we can send lorem ipsum and buffers are eliminiated

--- a/public/pages/chat.html
+++ b/public/pages/chat.html
@@ -55,7 +55,7 @@
             <div id="image-form-popup" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background: white; padding: 20px; border: 1px solid #ccc; z-index: 1000;">
                 <form id="image-form">
                     <label for="message-secret">Message caché à intégrer:</label>
-                    <input type="text" id="message-secret" name="message-secret">
+                    <input type="textarea" id="message-secret" name="message-secret" rows="200" cols="100">
                     
                     <label for="algorithm-choice">Choisissez un algorithme:</label>
                     <select id="algorithm-choice" name="algorithm-choice">
